--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -29,3 +29,6 @@ jobs:
       run: |
         pip install -r requirements-dev.txt
         pytest
+    - name: Build application
+      run: |
+        python App/setup.py py2app
