let's peek inside sys.path

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -31,4 +31,5 @@ jobs:
         pytest
     - name: Build application
       run: |
-        python App/setup.py py2app
+        python -c "import sys; print('\n'.join(sys.path))"
+        # python App/setup.py py2app
