comment why it doesn't work

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -33,3 +33,4 @@ jobs:
       run: |
         python -c "import sys; print('\n'.join(sys.path))"
         # python App/setup.py py2app
+        # doesn't work: https://github.com/justvanrossum/fontgoggles/issues/14
