use my fork of python-bidi

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ git+https://github.com/robotools/vanilla
 fonttools[ufo,lxml,woff,unicode,type1]
 freetype-py
 uharfbuzz
-python-bidi
+git+git://github.com/justvanrossum/python-bidi.git@implement-L3
