start of some refactoring, adding undo to the font list

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ fonttools[ufo,lxml,woff,unicode,type1]
 freetype-py
 uharfbuzz
 git+git://github.com/justvanrossum/python-bidi.git@implement-L3
+git+git://github.com/justvanrossum/jundo.git
