first stab at getting ufo2ft to compile features

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ freetype-py
 uharfbuzz
 git+git://github.com/justvanrossum/python-bidi.git@implement-L3
 git+git://github.com/justvanrossum/jundo.git
+ufo2ft
