add combining macron, tweaked some anchors, mark feature is being written

--- a/Tests/data/MutatorSans/MutatorSansBoldWide.ufo/glyphs/contents.plist
+++ b/Tests/data/MutatorSans/MutatorSansBoldWide.ufo/glyphs/contents.plist
@@ -86,6 +86,8 @@
     <string>dot.glif</string>
     <key>em</key>
     <string>em.glif</string>
+    <key>macroncmb</key>
+    <string>macroncmb.glif</string>
     <key>period</key>
     <string>period.glif</string>
     <key>quotedblbase</key>
