--- a/Tests/data/MutatorSans/MutatorSansBoldWide.ufo/lib.plist
+++ b/Tests/data/MutatorSans/MutatorSansBoldWide.ufo/lib.plist
@@ -392,6 +392,7 @@
       <string>arrowright</string>
       <string>arrowup</string>
       <string>em</string>
+      <string>macroncmb</string>
     </array>
   </dict>
 </plist>
