--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -18,6 +18,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install .
+        python -c "import platform; print(platform.platform())"
     - name: Lint with flake8
       run: |
         pip install flake8
