attempt to workaround freetype install issue #20

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        python freetypecrutch/copyftdylib.py # see https://github.com/justvanrossum/fontgoggles/issues/20
         pip install .
         python -c "import platform; print(platform.platform())"
     - name: Lint with flake8
