let's see how far this gets nowadays

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,5 +34,4 @@ jobs:
     - name: Build application
       run: |
         python -c "import sys; print('\n'.join(sys.path))"
-        # python App/setup.py py2app
-        # doesn't work: https://github.com/justvanrossum/fontgoggles/issues/14
+        python App/setup.py py2app
