forgot to add numpy requuirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ uharfbuzz
 git+git://github.com/justvanrossum/python-bidi.git@implement-L3
 git+git://github.com/justvanrossum/jundo.git
 ufo2ft
+numpy
