--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,7 +15,7 @@ jobs:
         python-version: 3.7
     - name: Install dependencies
       run: |
-        python -m pip install pip==19.3.1
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install .
         python -c "import platform; print(platform.platform())"
