--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -1,10 +1,11 @@
 name: Build FontGoggles Application
 
-on:
-  push:
-    tags:
-      - "v*"
+# on:
+#   push:
+#     tags:
+#       - "v*"
 
+on: [push]
 
 jobs:
   build:
@@ -36,4 +37,7 @@ jobs:
       run: |
         python3 -m venv venv
         source venv/bin/activate
+        python -c "import sys; print('\n'.join(sys.path))"
+    - name: Install dependencies
+      run: |
         python -c "import sys; print('\n'.join(sys.path))"
