--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -41,3 +41,4 @@ jobs:
     - name: Install dependencies
       run: |
         python -c "import sys; print('\n'.join(sys.path))"
+        echo "lalala"
