--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -40,8 +40,10 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         python -c "import sys; print('\n'.join(sys.path))"
+        pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
+        pip install .
     - name: Run Tests
       run: |
         source venv/bin/activate
