--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -57,9 +57,21 @@ jobs:
         python App/setup.py py2app
     - name: Codesign and Notarize
       run: |
+        source venv/bin/activate
         ./App/Notarize/codesign_app.sh "${{ secrets.CODESIGN_NAME }}" App/dist/FontGoggles.app App/Notarize/entitlements.xml
         /usr/bin/ditto -c -k --keepParent "App/dist/FontGoggles.app" "App/dist/FontGoggles.zip"
-        xcrun altool --notarize-app --primary-bundle-id "com.github.justvanrossum.FontGoggles" --username "${{ secrets.NOTARIZE_DEVELOPER }}" --password "${{ secrets.NOTARIZE_PASSWORD }}" --file App/dist/FontGoggles.zip
+        xcrun altool --notarize-app --primary-bundle-id "com.github.justvanrossum.FontGoggles" \
+                     --username "${{ secrets.NOTARIZE_DEVELOPER }}" \
+                     --password "${{ secrets.NOTARIZE_PASSWORD }}" \
+                     --file App/dist/FontGoggles.zip \
+                     --output-format xml \
+                     | python App/Notarize/await_notarization.py "${{ secrets.NOTARIZE_DEVELOPER }}" "${{ secrets.NOTARIZE_PASSWORD }}"
+    - name: Upload Notarization Log
+      uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: notarize_log.txt
+        path: notarize_log.txt
     - name: Upload Artifact
       uses: actions/upload-artifact@v1
       with:
