--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -60,6 +60,7 @@ jobs:
         source venv/bin/activate
         ./App/Notarize/codesign_app.sh "${{ secrets.CODESIGN_NAME }}" App/dist/FontGoggles.app App/Notarize/entitlements.xml
         python App/Notarize/build_dmg.py "App/dist/FontGoggles.app" "App/dist/FontGoggles.dmg"
+        codesign --sign "${{ secrets.CODESIGN_NAME }}" "App/dist/FontGoggles.dmg"
         xcrun altool --notarize-app --primary-bundle-id "com.github.justvanrossum.FontGoggles" \
                      --username "${{ secrets.NOTARIZE_DEVELOPER }}" \
                      --password "${{ secrets.NOTARIZE_PASSWORD }}" \
