--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -56,15 +56,15 @@ jobs:
     - name: Codesign and Notarize
       run: |
         source venv/bin/activate
-        ./App/Notarize/codesign_app.sh "${{ secrets.CODESIGN_NAME }}" App/dist/FontGoggles.app App/Notarize/entitlements.xml
-        python App/Notarize/build_dmg.py "App/dist/FontGoggles.app" "App/dist/FontGoggles.dmg"
+        App/Distribute/codesign_app.sh "${{ secrets.CODESIGN_NAME }}" App/dist/FontGoggles.app App/Distribute/entitlements.xml
+        python App/Distribute/build_dmg.py "App/dist/FontGoggles.app" "App/dist/FontGoggles.dmg"
         codesign --sign "${{ secrets.CODESIGN_NAME }}" "App/dist/FontGoggles.dmg"
         xcrun altool --notarize-app --primary-bundle-id "com.github.justvanrossum.FontGoggles" \
                      --username "${{ secrets.NOTARIZE_DEVELOPER }}" \
                      --password "${{ secrets.NOTARIZE_PASSWORD }}" \
                      --file App/dist/FontGoggles.dmg \
                      --output-format xml \
-                     | python App/Notarize/await_notarization.py "${{ secrets.NOTARIZE_DEVELOPER }}" "${{ secrets.NOTARIZE_PASSWORD }}"
+                     | python App/Distribute/await_notarization.py "${{ secrets.NOTARIZE_DEVELOPER }}" "${{ secrets.NOTARIZE_PASSWORD }}"
         xcrun stapler staple App/dist/FontGoggles.dmg
     - name: Upload Notarization Log
       uses: actions/upload-artifact@v1
