--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -82,7 +82,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         body: |
           --release info--
-        draft: false
+        draft: true
         prerelease: false
     - name: Upload Release Asset
       id: upload-release-asset
