--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -49,6 +49,14 @@ jobs:
       run: |
         source venv/bin/activate
         pytest
+    - name: Read CHANGELOG.md
+      id: changelog
+      env:
+        GITHUB_REF: ${{ github.ref }}
+      run: |
+        source venv/bin/activate
+        python App/Distribute/extract_changes.py
+        echo "::set-output name=body::$(python App/Distribute/extract_changes.py)"
     - name: Build Application
       run: |
         source venv/bin/activate
@@ -72,13 +80,6 @@ jobs:
       with:
         name: notarize_log.txt
         path: notarize_log.txt
-    - name: Read CHANGELOG.md
-      id: changelog
-      env:
-        GITHUB_REF: ${{ github.ref }}
-      run: |
-        python App/Distribute/extract_changes.py
-        echo "::set-output name=body::$(python App/Distribute/extract_changes.py)"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
