--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -33,11 +33,22 @@ jobs:
         python3 -c "import platform; print('macOS version:', platform.mac_ver()[0])"
     - name: Checkout
       uses: actions/checkout@v1
-    - name: Setup venv and install dependencies
+    - name: Setup Virtual Environment
       run: |
         python3 -m venv venv
         source venv/bin/activate
         python -c "import sys; print('\n'.join(sys.path))"
+    - name: Read CHANGELOG.md
+      id: changelog
+      env:
+        GITHUB_REF: ${{ github.ref }}
+      run: |
+        source venv/bin/activate
+        python App/Distribute/extract_changes.py
+        echo "::set-output name=body::$(python App/Distribute/extract_changes.py)"
+    - name: Install Dependencies
+      run: |
+        source venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
@@ -49,14 +60,6 @@ jobs:
       run: |
         source venv/bin/activate
         pytest
-    - name: Read CHANGELOG.md
-      id: changelog
-      env:
-        GITHUB_REF: ${{ github.ref }}
-      run: |
-        source venv/bin/activate
-        python App/Distribute/extract_changes.py
-        echo "::set-output name=body::$(python App/Distribute/extract_changes.py)"
     - name: Build Application
       run: |
         source venv/bin/activate
