--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -38,14 +38,6 @@ jobs:
         python3 -m venv venv
         source venv/bin/activate
         python -c "import sys; print('\n'.join(sys.path))"
-    - name: Read CHANGELOG.md
-      id: changelog
-      env:
-        GITHUB_REF: ${{ github.ref }}
-      run: |
-        source venv/bin/activate
-        python App/Distribute/extract_changes.py
-        echo "::set-output name=body::$(python App/Distribute/extract_changes.py)"
     - name: Install Dependencies
       run: |
         source venv/bin/activate
@@ -83,6 +75,14 @@ jobs:
       with:
         name: notarize_log.txt
         path: notarize_log.txt
+    - name: Read CHANGELOG.md
+      id: changelog
+      env:
+        GITHUB_REF: ${{ github.ref }}
+      run: |
+        source venv/bin/activate
+        python App/Distribute/extract_changes.py
+        echo "::set-output name=body::$(python App/Distribute/extract_changes.py)"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -91,8 +91,7 @@ jobs:
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
-        body: |
-          --release info--
+        body: ${{ steps.changelog.outputs.body }}
         draft: true
         prerelease: false
     - name: Upload Release Asset
