--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -6,10 +6,11 @@ on:
     - docs/*
     - docsSource/*
     - Scripts/*
-    - *.md
     - AUTHORS.txt
+    - CHANGELOG.md
     - CONTRIBUTORS.txt
     - LICENSE.txt
+    - README.md
 
 
 jobs:
