switch over to unicodedata2, therefore unicode 12.1.0. This partially addresses #49

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,4 @@ git+git://github.com/justvanrossum/python-bidi.git@implement-L3
 git+git://github.com/justvanrossum/jundo.git
 ufo2ft
 numpy
+unicodedata2
