--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ fonttools[ufo,lxml,unicode,woff,type1]==4.21.1
 freetype-py==2.2.0
 uharfbuzz==0.14.0
 python-bidi==0.4.2
-git+git://github.com/justvanrossum/jundo.git
+jundo==0.1.2
 ufo2ft==2.20.0
 numpy==1.20.2
 unicodedata2==13.0.0.post2
