add some glyphs to trigger an AttributeError, due to MinimalFont not having .info

--- a/Tests/data/MutatorSans/MutatorSansBoldWideMutated.ufo/glyphs/contents.plist
+++ b/Tests/data/MutatorSans/MutatorSansBoldWideMutated.ufo/glyphs/contents.plist
@@ -76,6 +76,10 @@
     <string>arrowright.glif</string>
     <key>arrowup</key>
     <string>arrowup.glif</string>
+    <key>asteriskabovecmb</key>
+    <string>asteriskabovecmb.glif</string>
+    <key>asteriskbelowcmb</key>
+    <string>asteriskbelowcmb.glif</string>
     <key>colon</key>
     <string>colon.glif</string>
     <key>comma</key>
