Add glyph /b which consists of a single offcurve point; this reproduces #156; add manually edited ttx, it's not possible to build this from a UFO

--- a/Tests/data/FontGoggles/QuadTest-Regular.ufo/glyphs/contents.plist
+++ b/Tests/data/FontGoggles/QuadTest-Regular.ufo/glyphs/contents.plist
@@ -6,6 +6,8 @@
     <string>_notdef.glif</string>
     <key>a</key>
     <string>a.glif</string>
+    <key>b</key>
+    <string>b.glif</string>
     <key>space</key>
     <string>space.glif</string>
   </dict>
