--- a/Tests/data/FontGoggles/QuadTest-Regular.ufo/lib.plist
+++ b/Tests/data/FontGoggles/QuadTest-Regular.ufo/lib.plist
@@ -13,6 +13,7 @@
       <string>.notdef</string>
       <string>space</string>
       <string>a</string>
+      <string>b</string>
     </array>
   </dict>
 </plist>
