--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ py2app==0.24
 pyobjc==7.2
 corefoundationasyncio==0.0.1
 git+https://github.com/robotools/vanilla
+blackrenderer==0.1.0
 fonttools[woff,ufo,type1,unicode,lxml]==4.24.0
 freetype-py==2.2.0
 uharfbuzz==0.16.0
