--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ wheel>=0.33.6
 py2app==0.24
 pyobjc==7.2
 corefoundationasyncio==0.0.1
-git+https://github.com/robotools/vanilla
+cocoa-vanilla==0.2.0
 blackrenderer==0.3.1
 # fonttools[woff,ufo,type1,unicode,lxml]==4.24.3
 # Temporarily add support for experimental extensions to the not-yet-official COLRv1 format:
