--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,6 @@ uharfbuzz==0.19.0
 python-bidi==0.4.2
 jundo==0.1.2
 ufo2ft==2.25.1
-numpy==1.21.4
-unicodedata2==13.0.0.post2
+numpy==1.21.4  # pyup: ignore
+unicodedata2==14.0.0
 git+https://github.com/BlackFoundryCom/rcjk-tools/
