Switch to 3.9, and let's see if we can get away without a custom wheel for lxml

--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -25,9 +25,9 @@ jobs:
         rm -fr *.p12
         # security find-identity -v -p codesigning
 
-    - name: Set up Python 3.7
+    - name: Set up Python 3.9
       run: |
-        curl https://www.python.org/ftp/python/3.7.6/python-3.7.6-macosx10.9.pkg --output pythonInstaller.pkg
+        curl https://www.python.org/ftp/python/3.9.13/python-3.9.13-macosx10.9.pkg --output pythonInstaller.pkg
         sudo installer -pkg pythonInstaller.pkg -target /
 
     - name: Check Python
@@ -51,8 +51,8 @@ jobs:
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
         pip install .
-        # Install custom wheels to workaround various problems, see App/CustomWheels/README.md
-        pip install --upgrade App/CustomWheels/lxml-4.5.0-cp37-cp37m-macosx_10_9_x86_64.whl
+        ## Install custom wheels to workaround various problems, see App/CustomWheels/README.md
+        # pip install --upgrade App/CustomWheels/lxml-4.5.0-cp37-cp37m-macosx_10_9_x86_64.whl
 
     - name: Run Tests
       run: |
