--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -20,10 +20,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Python 3.9
+      - name: Set up Python 3.12
         uses: actions/setup-python@v1
         with:
-          python-version: 3.9
+          python-version: "3.12"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
