--- a/requirements-docs.txt
+++ b/requirements-docs.txt
@@ -1,5 +1,5 @@
-markdown==3.4.1
-pillow==9.4.0
-fontTools==4.39.4
+markdown==3.6
+pillow==10.3.0
+fontTools====4.52.1
 fs==2.4.16
-brotli==1.0.9
+brotli==1.1.0
