--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -2,6 +2,7 @@ name: Run FontGoggles test suite
 
 on:
   push:
+    branches: [master]
     paths-ignore:
       - docs/*
       - docsSource/*
@@ -13,6 +14,7 @@ on:
       - README.md
 
   pull_request:
+    branches: [master]
 
 jobs:
   build:
