--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -46,10 +46,10 @@ jobs:
       - name: Install Dependencies
         run: |
           source venv/bin/activate
-          pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
-          pip install .
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          python -m pip install -r requirements-dev.txt
+          python -m pip install .
 
       - name: Run Tests
         run: |
