--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           source venv/bin/activate
           python -m pip install --upgrade pip
+          python -m pip --version
           python -m pip install -r requirements.txt
           python -m pip install -r requirements-dev.txt
           python -m pip install .
