--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -24,6 +24,9 @@ jobs:
           rm -fr *.p12
           # security find-identity -v -p codesigning
 
+      - name: Git checkout
+        uses: actions/checkout@v4
+
       - name: Set up Python from python.org
         run: |
           curl https://www.python.org/ftp/python/3.12.3/python-3.12.3-macos11.pkg --output python-installer.pkg
@@ -34,14 +37,12 @@ jobs:
           python3-intel64 --version
           python3-intel64 -c "import platform; print('macOS version:', platform.mac_ver()[0], platform.platform())"
 
-      - name: Checkout
-        uses: actions/checkout@v1
-
       - name: Setup Virtual Environment
         run: |
           python3-intel64 -m venv venv
           source venv/bin/activate
           python -c "import sys; print('\n'.join(sys.path))"
+          python -c "import platform; print('macOS version:', platform.mac_ver()[0], platform.platform())"
 
       - name: Install Dependencies
         run: |
