--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -32,17 +32,17 @@ jobs:
           curl https://www.python.org/ftp/python/3.12.3/python-3.12.3-macos11.pkg --output python-installer.pkg
           sudo installer -pkg python-installer.pkg -target /
 
-      - name: Check Python
-        run: |
-          which python3.12-intel64
-          python3.12-intel64 --version
-          python3.12-intel64 -c "import platform; print('macOS version:', platform.mac_ver()[0], platform.platform())"
-
-      - name: Setup Virtual Environment
-        run: |
-          python3.12-intel64 -m venv venv
+          # Somehow using plain "python3" gives us the runner's homebrew Python,
+          # so let's be explicit about the path:
+          ourpython=/Library/Frameworks/Python.framework/Versions/3.12/bin/python3.12-intel64
+          ls -l $ourpython
+          $ourpython --version
+          $ourpython -c "import platform; print('platform:', platform.platform())"
+          $ourpython -c "import platform; print('macOS version:', platform.mac_ver()[0])"
+          $ourpython -m venv venv
           source venv/bin/activate
           python -c "import sys; print('\n'.join(sys.path))"
+          python --version
           python -c "import platform; print('macOS version:', platform.mac_ver()[0], platform.platform())"
 
       - name: Install Dependencies
