Fix release trigger

--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -102,7 +102,7 @@ jobs:
 
       - name: Read CHANGELOG.md
         id: changelog
-        if: github.ref == 'refs/heads/master'
+        if: startsWith(github.event.ref, 'refs/tags')
         env:
           GITHUB_REF: ${{ github.ref }}
         run: |
@@ -111,7 +111,7 @@ jobs:
 
       - name: Create Release
         id: create_release
-        if: github.ref == 'refs/heads/master'
+        if: startsWith(github.event.ref, 'refs/tags')
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -124,7 +124,7 @@ jobs:
 
       - name: Upload Release Asset
         id: upload-release-asset
-        if: github.ref == 'refs/heads/master'
+        if: startsWith(github.event.ref, 'refs/tags')
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
