--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ ufo2ft==3.2.8
 numpy==2.1.1
 unicodedata2==15.1.0
 git+https://github.com/BlackFoundryCom/rcjk-tools/
-delocate==0.12.0
+delocate==0.11.0  # pin for now
