--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ cocoa-vanilla==0.6.0
 ### fonttools[woff,lxml,unicode,ufo,type1]==4.53.1 # moved to setup.py
 # Temporarily add support for experimental extensions to the not-yet-official COLRv1 format:
 # fonttools[woff,ufo,type1,unicode,lxml] @ git+https://github.com/justvanrossum/fonttools@colrv1-varco
-uharfbuzz==0.39.5
-### python-bidi==0.4.2  # pin for now # moved to setup.py
+uharfbuzz==0.42.0
+python-bidi==0.4.2  # pin for now
 jundo==0.1.2
 ### ufo2ft==3.2.8 # moved to setup.py
 ### numpy==2.1.1 # moved to setup.py
