--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,11 @@ fonttools[type1,woff,lxml,unicode,ufo]==4.55.3
 # Temporarily add support for experimental extensions to the not-yet-official COLRv1 format:
 # fonttools[woff,ufo,type1,unicode,lxml] @ git+https://github.com/justvanrossum/fonttools@colrv1-varco
 uharfbuzz==0.43.0
+# newer python-bidi is completely incompatible with how we use it
 python-bidi==0.4.2  # pyup: ignore
 jundo==0.1.2
 ufo2ft==3.3.1
 numpy==2.2.0
 unicodedata2==15.1.0
 git+https://github.com/BlackFoundryCom/rcjk-tools/
-delocate==0.12.0  # pin for now
+delocate==0.12.0
