Simplify release by using different action, and make changes go via file

--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -107,29 +107,13 @@ jobs:
           GITHUB_REF: ${{ github.ref }}
         run: |
           source venv/bin/activate
-          echo "changelog_contents=$(python App/Distribute/extract_changes.py)" >>$GITHUB_OUTPUT
+          python App/Distribute/extract_changes.py > tmp_latest_changes.txt
 
       - name: Create Release
-        id: create_release
         if: startsWith(github.event.ref, 'refs/tags')
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: ${{ steps.changelog.outputs.changelog_contents }}
+          body_path: 'tmp_latest_changes.txt'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: App/dist/FontGoggles.dmg
           draft: true
-          prerelease: false
-
-      - name: Upload Release Asset
-        id: upload-release-asset
-        if: startsWith(github.event.ref, 'refs/tags')
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: App/dist/FontGoggles.dmg
-          asset_name: FontGoggles.dmg
-          asset_content_type: application/octet-stream
